<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="sort_title">Sort By Title</string>
    <string name="sort_date">Sort By Date</string>
    <string name="note">Note</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="normal_order">Normal Order</string>
    <string name="add">ADD</string>
    <string name="label_icon">label icon</string>
    <string name="search">Search</string>
    <string name="label">Label</string>
</resources>
