<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notes.MainActivity">
    <item
        android:id="@+id/action_sort_title"
        android:title="@string/sort_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_date_change"
        android:title="@string/sort_date"
        app:showAsAction="never" />
    <item android:id="@+id/action_sort_id"
        android:title="@string/normal_order"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_24px"
        android:title="@string/delete_all_notes"
        app:showAsAction="always"/>
</menu>
